<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_height="match_parent"
              android:layout_width="match_parent"
              android:background="@color/colorPrimary"
              android:orientation="horizontal">


    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_vertical"
                  android:background="#FFFFFF"
                  android:padding="@dimen/double_space"
                  android:layout_margin="@dimen/double_space"
                  android:orientation="vertical">

        <ImageView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:src="@drawable/logo"/>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/double_space"
                  android:textColor="#FF0000"
                  android:id="@+id/errorTV"/>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/passwordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirmPasswordET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/confirm_password"/>

        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="@string/register"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/double_space"
                android:background="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:layout_height="wrap_content"
                android:id="@+id/registerButton"/>

    </LinearLayout>


</LinearLayout>

